--- a/_config.yml
+++ b/_config.yml
@@ -192,6 +192,11 @@ exclude:
   - readme_preview/
   - vendor
   - _pages/blog.md
+  - _pages/projects.md
+  - _pages/cv.md
+  - _pages/teaching.md
+  - _pages/books.md
+  - _pages/people.md
   - _posts/
   - _projects/?_project.md
   - assets/jupyter/blog.ipynb
