--- a/_config.yml
+++ b/_config.yml
@@ -197,6 +197,8 @@ exclude:
   - _pages/teaching.md
   - _pages/books.md
   - _pages/people.md
+  - _pages/repositories.md
+  - _pages/dropdown.md
   - _posts/
   - _projects/?_project.md
   - assets/jupyter/blog.ipynb
